--- a/android/src/main/res/layout/floating_widget_layout.xml
+++ b/android/src/main/res/layout/floating_widget_layout.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-     android:id="@+id/Layout_Expended"
-    android:background="#000"
+    android:id="@+id/Layout_Expended"
+    android:background="@drawable/rounded_frame_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-             android:elevation="30dp"
-
+    android:elevation="30dp"
+    android:outlineProvider="background"
     >
     <RelativeLayout
         android:id="@+id/view_wrapper"
     	android:layout_width="250dp"
-		android:layout_height="180dp"
+		android:layout_height="140dp"
         android:elevation="30dp"
     >
     <com.devbrackets.android.exomedia.ui.widget.VideoView
@@ -22,39 +22,10 @@
 
     <RelativeLayout
         android:id="@+id/overlay_view"
-         android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-         android:visibility="gone"
+        android:visibility="gone"
         android:layout_marginTop="0dp">
-
-       <View
-                android:alpha="0.2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#000"/>
-
-            <ImageButton
-                android:id="@+id/increase_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:background="@null"
-                android:onClick="increaseWindowSize"
-                android:padding="2dp"
-                android:src="@drawable/ic_fullscreen"/>
-
-                 <ImageButton
-                android:id="@+id/decrease_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                     android:background="@null"
-                    android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:onClick="decreaseWindowSize"
-                android:padding="2dp"
-                android:visibility = "gone"
-                android:src="@drawable/ic_fullscreen_exit"/>
 
 
         <RelativeLayout
@@ -66,18 +37,6 @@
             android:visibility="visible">
 
             <ImageButton
-                android:id="@+id/app_video_expand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@null"
-                android:onClick="returnToApp"
-                android:src="@drawable/ic_open_app" />
-
-
-            <ImageButton
                 android:id="@+id/app_video_crop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -85,39 +44,66 @@
                 android:background="@null"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
-
                 android:src="@drawable/ic_close_box" />
 
         </RelativeLayout>
 
-
-
         <RelativeLayout
-
             android:id="@+id/app_video_bottom_box"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="8dp"
             android:visibility="visible">
 
 
-               <ImageButton
+        <View
+            android:alpha="0.2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000"/>
+
+            <ImageButton
+                android:id="@+id/increase_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:background="@null"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="increaseWindowSize"
+                android:src="@drawable/ic_fullscreen"/>
+
+            <ImageButton
+                android:id="@+id/decrease_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:background="@null"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="decreaseWindowSize"
+                android:visibility = "gone"
+                android:src="@drawable/ic_fullscreen_exit"/>
+                
+            <ImageButton
                 android:id="@+id/app_video_prev"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                   android:background="@null"
-                 android:layout_toLeftOf="@+id/app_play_pause"
-
+                android:background="@null"
+                android:layout_toLeftOf="@+id/app_play_pause"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:onClick="onPrev"
                 android:src="@drawable/ic_skip_previous"/>
+
             <RelativeLayout
                 android:id="@+id/app_play_pause"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content">
+                android:layout_centerVertical="true">
+
                 <ImageButton
                     android:id="@+id/app_video_play"
                     android:layout_width="wrap_content"
@@ -135,7 +121,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-
                     android:background="@null"
                     android:layout_centerHorizontal="true"
                     android:onClick="onPause"
@@ -143,14 +128,15 @@
 
             </RelativeLayout>
 
-                 <ImageButton
+            <ImageButton
                 android:id="@+id/app_video_fwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                     android:background="@null"
+                android:background="@null"
                 android:layout_toRightOf="@+id/app_play_pause"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:onClick="onNext"
                 android:src="@drawable/ic_skip_forward"/>
 
